fixed off centered issues with manga-show

--- a/app/assets/stylesheets/manga.scss
+++ b/app/assets/stylesheets/manga.scss
@@ -22,7 +22,7 @@
 }
 
 .mangaHomeTitle{
-  font-size: 20px
+  font-size: 24px
 }
 
 .manga-dropdown {
@@ -54,7 +54,7 @@
   list-style-type: none;
   justify-content: center;
   display: flex;
-  max-width: 100%;
+
   height: auto;
   padding-top: 25px;
   padding-bottom: 10px;
@@ -87,7 +87,6 @@
 }
 
 .single-manga-words {
-  padding-right: 150px;
   list-style-type: none;
   line-height: 1.5em;
   text-decoration: none;
