--- a/app/assets/stylesheets/review.scss
+++ b/app/assets/stylesheets/review.scss
@@ -37,7 +37,6 @@
 }
 
 .review {
-  width: 85%;
 }
 
 .userReview-top {
